...
    <string name="INVALID_PHONE_NUMBER">Invalid Phone!</string>
    <string name="INVALID_NAME">Invalid Name!</string>

    <!-- Values for role selection Spinner -->
    <string-array name="ROLE_VALUES">
        <item>Select Role</item>
        <item>Employee</item>
        <item>Employer</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
</resources>

