...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/applicationStatusButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Application Status"
                    android:backgroundTint="#677676"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="8dp" />

                <Button
                    android:id="@+id/preferredEmployersButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Preferred Employers"
                    android:backgroundTint="#677676"
                    android:layout_marginHorizontal="8dp" />
            </LinearLayout>
...
