...
                android:contentDescription="Star 3"
                android:clickable="true"
                app:tint="#E0DADA"/>

            <!-- Star 4 -->
            <ImageButton
                android:id="@+id/star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                app:srcCompat="@android:drawable/btn_star"
                android:contentDescription="Star 4"
                android:clickable="true"
...
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:background="@android:drawable/editbox_background" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginTop="16dp"
            android:backgroundTint="#757575" />

...
