...
                    android:layout_height="wrap_content"
                    android:text="Hired Employees"
                    android:backgroundTint="#677676"
                    android:layout_marginEnd="8dp" />

                <Button
                    android:id="@+id/logoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#677676"
                    android:text="Logout" />
            </LinearLayout>

...
