...
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/preferredEmployersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:itemCount="3"
                tools:listitem="@layout/preferred_employer_item_view" />

            <Button
                android:id="@+id/dashboardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="#677676"
                android:text="Return to Dashboard" />
...
